frame/support/test/tests/pallet_ui/store_trait_leak_private.stderr
error[E0446]: private type `pallet::_GeneratedPrefixForStorageFoo<T>` in public interface
  --> $DIR/store_trait_leak_private.rs:11:37
   |
11 |     #[pallet::generate_store(pub trait Store)]
   |                                        ^^^^^ can't leak private type
...
21 |     type Foo<T> = StorageValue<_, u8>;
   |          - `pallet::_GeneratedPrefixForStorageFoo<T>` declared as private
